@@ -2887,6 +2887,20 @@ Their definitions can be found in melon/include/mln_types.h.
       i) mln_iothread_msg_data(m)
          Get the message data.
 
+  42) Error
+      a) void mln_error_init(mln_string_t *filenames, mln_string_t *errmsgs, mln_size_t nfile, mln_size_t nmsg);
+         Initialize error files and messages. This function will update global variables those working on the project
+         that refers to this library.
+
+      b) RET(code);
+         Get return value. 'code' must be a positive number or zero.
+
+      c) CODE(r);
+         Get error code from return value 'r' that generated by 'RET'.
+
+      d) char *mln_error_string(int err, void *buf, mln_size_t len);
+         Get error message string from return value 'err' and set in buffer 'buf' with buffer length 'len'.
+
 5. Framework Usage
    It is very easy to use this framework. Before we use it, we have to initialize it.
    1) include header file.
